--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "93fbbd1d",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "63f44832",
    "metadata": {},
    "outputs": [],
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "6d4292fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "im = cv2.imread('test1.jpg')\n",
-    "im = cv2.cvtColor(im, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
     "bboxes = classifier.detectMultiScale(im)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "5d84ec13",
    "metadata": {},
    "outputs": [],
@@ -43,13 +43,12 @@
     "for box in bboxes:\n",
     "    x, y, width, height = box\n",
     "    x2, y2 = x + width, y + height\n",
-    "    image = cv2.rectangle(im, (x, y), (x2, y2), (0,0,255), 1)\n",
-    "    image[y:y2, x:x2] = cv2.medianBlur(im[y:y2, x:x2], 35)"
+    "    im[y:y2, x:x2] = cv2.medianBlur(im[y:y2, x:x2], 35)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e6bdf683",
    "metadata": {},
    "outputs": [],
@@ -61,51 +60,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "110aea7d",
+   "execution_count": null,
+   "id": "321ad671",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "111f99c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def edge_mask(img, line_size, blur_value):\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    gray_blur = cv2.medianBlur(gray, blur_value)\n",
+    "    edges = cv2.adaptiveThreshold(gray_blur, 255, cv2.ADAPTIVE_THRESH_MEAN_C, cv2.THRESH_BINARY, line_size, blur_value)\n",
+    "    return edges\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27f7d248",
+   "id": "72352c71",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def color_quantization(img, k):\n",
+    "    data = np.float32(img).reshape((-1, 3))\n",
+    "\n",
+    "    criteria = (cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER, 20, 0.001)\n",
+    "\n",
+    "    ret, label, center = cv2.kmeans(data, k, None, criteria, 10, cv2.KMEANS_RANDOM_CENTERS)\n",
+    "    center = np.uint8(center)\n",
+    "    result = center[label.flatten()]\n",
+    "    result = result.reshape(img.shape)\n",
+    "    return result"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0568f8d4",
+   "id": "8b1da346",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff003ca6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e3cd8ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def cartoon(filepath):\n",
+    "    img = cv2.imread(filepath)\n",
+    "    data = np.float32(img).reshape((-1, 3))\n",
+    "    line_size = 7\n",
+    "    blur_value = 7\n",
+    "\n",
+    "    edges = edge_mask(img, line_size, blur_value)\n",
+    "    total_color = 9\n",
+    "    img = color_quantization(img, total_color)\n",
+    "    blurred = cv2.bilateralFilter(img, d=7, sigmaColor=200,sigmaSpace=200)\n",
+    "    cartoon = cv2.bitwise_and(blurred, blurred, mask=edges)\n",
+    "    return cartoon"
+   ]
   }
  ],
  "metadata": {
