--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -60,15 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "321ad671",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "111f99c4",
    "metadata": {},
    "outputs": [],
@@ -82,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "72352c71",
    "metadata": {},
    "outputs": [],
@@ -101,24 +93,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8b1da346",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cartoon(filepath):\n",
-    "    img = cv2.imread(filepath)\n",
+    "def cartoon(img):\n",
+    "\n",
     "    data = np.float32(img).reshape((-1, 3))\n",
     "    line_size = 7\n",
     "    blur_value = 7\n",
     "\n",
     "    edges = edge_mask(img, line_size, blur_value)\n",
-    "    total_color = 9\n",
+    "    total_color = 20\n",
     "    img = color_quantization(img, total_color)\n",
     "    blurred = cv2.bilateralFilter(img, d=7, sigmaColor=200,sigmaSpace=200)\n",
     "    cartoon = cv2.bitwise_and(blurred, blurred, mask=edges)\n",
     "    return cartoon"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f78fb54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "# Read in the video from the camera\n",
+    "video = cv2.VideoCapture(0)\n",
+    "\n",
+    "# Load the Haar cascade classifier for detecting faces\n",
+    "# face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
+    "\n",
+    "# Loop through each frame of the video\n",
+    "while True:\n",
+    "    # Read the current frame\n",
+    "    ret, frame = video.read()\n",
+    "\n",
+    "    frame_new = cartoon(frame)\n",
+    "       \n",
+    "\n",
+    "    # Show the frame\n",
+    "    cv2.imshow('Video', frame_new)\n",
+    "\n",
+    "    # Check if the user pressed the 'q' key\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "# Release the video capture object and close all windows\n",
+    "video.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "844420f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
